added the second part

--- a/index.html
+++ b/index.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Assignment</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@800&display=swap"
+        rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/styles.css".css">
+    <link rel="stylesheet" href="styles/styles.css" .css">
 </head>
+
 <body>
     <header class="header">
         <nav>
+            .
             <h3 class="nav-title">Let's make beautiful flowers a part of your life.</h3>
-            <p>“A flower’s appeal is in its contradictions — so delicate in form yet strong in fragrance, so small in size yet big in beauty, so short in life yet long on effect.”– Terri Guillemets</p>
+            <p>“A flower’s appeal is in its contradictions — so delicate in form yet strong in fragrance, so small in
+                size yet big in beauty, so short in life yet long on effect.”– Terri Guillemets</p>
             <button class="btn-primary">Shop Now</button>
 
         </nav>
         <img src="images/pngwing 10.png" alt="">
     </header>
     <main>
+        <nav>
+            <div class="banner">
+                <h3>Our Featured Flowers</h3>
+                <p>“Don’t wait for someone to bring you flowers. Plant your own garden and decorate your own soul.”–
+                    Luther Burbank</p>
+            </div>
+            <div class="pic-container">
+                <img class="pic-6" src="images/pngwing 6.png" alt="picture 6">
+                <img class="pic-5" src="images/pngwing 5.png" alt="picture 5">
+                <img class="pic-7" src="images/pngwing 7.png" alt="picture 7">
+            </div>
+            <div>
+                <div class="pic-title">
+                    <h6>Violet Flower</h6>
+                    <h6>Colorful Flower</h6>
+                    <h6>Yellow Flower</h6>
+                </div>
+            </div>
 
+
+        </nav>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
