--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
                     <h6>Yellow Flower</h6>
                 </div>
             </div>
+            <section class="section2">
+                <div class="logo-container">
+                    <img src="images/Group 57.png" alt="Deliveryman">
+                    <img src="images/Group 58.png" alt="Fresh Flower">
+                    <img src="images/Group 59.png" alt="Support">
+                </div>
+                <div class="logo-title">
+                    <h6>Same Day Delivery.</h6>
+                    <h6>Fresh Flowers</h6>
+                    <h6>24/7 Free Support.</h6>
+                </div>
+            </section>
 
 
         </nav>
