--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
                     <h6>24/7 Free Support.</h6>
                 </div>
             </section>
+            <section class="section3">
+                <div class="title-2">
+                    <h5>Hot Deal ! Sale Up To 25% <span style="color:  #E55473;;">Off</span></h5>
+                    <p>“A flower does not use words to announce its arrival to the world; it just blooms.”– Matshona Dhliwayo</p>
+                    <button class="btn-primary">Sign Up</button>
+                </div>
+                <img src="images/pngwing 8.png" alt="Red Flower">
+
+            </section>
 
 
         </nav>
