--- a/index.html
+++ b/index.html
@@ -59,11 +59,25 @@
             <section class="section3">
                 <div class="title-2">
                     <h5>Hot Deal ! Sale Up To 25% <span style="color:  #E55473;;">Off</span></h5>
-                    <p>“A flower does not use words to announce its arrival to the world; it just blooms.”– Matshona Dhliwayo</p>
+                    <p>“A flower does not use words to announce its arrival to the world; it just blooms.”– Matshona
+                        Dhliwayo</p>
                     <button class="btn-primary">Sign Up</button>
                 </div>
                 <img src="images/pngwing 8.png" alt="Red Flower">
 
+            </section>
+            <section class="section4">
+                <div class="instagram">
+                    <h5>Instagram</h5>
+                    <p>“Gardens and flowers have a way of bringing people together, drawing them from their homes.” –
+                        Clare Ansberry</p>
+                </div>
+                <div class="group-images">
+                    <img src="images/Flower 01.png" alt="">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <img src="images/Rectangle 6.png" alt="">
+                </div>
             </section>
 
 
