--- a/index.html
+++ b/index.html
@@ -79,11 +79,27 @@
                     <img src="images/Rectangle 6.png" alt="">
                 </div>
             </section>
+            <section class="latest-deals">
+                <div class="section5">
+                    <h4>Get The Latest Deals</h4>
+                    <p>$30 coupon for first shopping</p>
+
+                </div>
+                <form>
+                    <input class="email" type="email" placeholder="Enter your email here...."" name=" email" id="">
+                    <input class="btn-primary" type="submit" value="Subscribe">
+                </form>
+            </section>
 
 
         </nav>
     </main>
     <footer>
+        <div class="section6">
+            <h5 class="last-title"><span style="color: #E55473;">Flower</span>Shop</h5>
+            <p>“There are always flowers for those who want to see them.”– Henri Matisse</p>
+            <p class="end">@2020-2023, FlowerShop.com. All rights reserved.</p>
+        </div>
 
     </footer>
 </body>
